# app-variacao

./: .gitignore  README.md  aula11.py  pyproject.toml  tests.py  utils.py
app_variacao/: __main__.py
app_variacao.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app_variacao/app/: __init__.py  myapp.py
app_variacao/app/app_types/: __init__.py  _config.py
app_variacao/app/controllers/: __init__.py  controller_base.py  controller_main_app.py  controller_view_variacao.py
app_variacao/app/menu_bar/: __init__.py
app_variacao/app/models/: __init__.py  _model_config.py  base_model.py  model_view_variacao.py
app_variacao/app/pages/: __init__.py  page_variacao.py
app_variacao/app/ui/: __init__.py  base_view.py  core_pages.py  core_types.py  core_widgets.py
app_variacao/app/ui/core/: __init__.py  core_pages.py  core_types.py  core_widgets.py
app_variacao/app/view/: __init__.py  menu_bar.py  page_home.py  page_variacao.py
app_variacao/app/view/views_widgets/: __init__.py  data_import_view.py  sheet_view.py
app_variacao/documents/: __init__.py
app_variacao/documents/sheet/: __init__.py  _parse.py  parse.py
app_variacao/documents/types/: __init__.py  _adapter.py  _array.py  _hash_map.py
app_variacao/io/: __init__.py
app_variacao/soup_files/: __init__.py  files.py
app_variacao/types/: __init__.py  core.py
app_variacao/ui/: gui.py
app_variacao/ui/controllers/: __init__.py
app_variacao/ui/core/: __init__.py  core_widgets.py
app_variacao/ui/models/: __init__.py
app_variacao/util/: __init__.py
scripts/: lib_venv.sh
(+6 files in other folders)
