[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app_variacao"
version = "0.1.0"
authors = [
  { name="Bruno Chaves"},
]

description = "Variação de Leitura"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas",
]

[tool.setuptools.packages.find]
include = ["app_variacao*"] # Encontra a pasta raiz e todos os subpacotes automaticamente

